# syft

./: .bumpversion.cfg  .dockerignore  .gitignore  .pre-commit-config.yaml  @madhava@syft-cache.org.patch  CHANGELOG.md  MANIFEST.in  README.md  andrew.sh  build.sh  client_config.json  client_config.sql  davo.sh  deploy.sh  justfile  live_andrew.sh  live_madhava.sh  madhava.sh  madhava_syt.ipynb  make_andrew.sh  me.sh  o  patch.ipynb  pyproject.toml  reset.sh  server.sh  syftbox-0.1.0-py3-none-any.whl  syftbox.pem  syt.ipynb  syt.py  tox.ini
.github/workflows/: apps-tests.yaml  cd-deploy-stage.yaml  cd-deploy.yaml  cd-release.yaml  e2e-tests.yaml  nightlies.yaml  pr-tests.yaml
apps/: manual_pipeline_app.py
apps/netflix/: .gitignore  README.md  dataset.py  imdb.py  main.py  netflix.py  page.py  run.sh  stats.py
client/: client.py  client_main.py  main.py  pyproject.toml  requirements.txt
client/old_plugins/: hello.py  init_syft_folders.py  sync_files_with_cache.py  sync_new_datasites_to_cache.py
client/plugins/: create_datasite.py  init.py  nsync.py  stage_my_datasites.py  sync.py  sync_files_with_cache.py
client/templates/: index.html
default_apps/adder/: main.py  run.sh
default_apps/basic_website_creator/: run.sh
default_apps/github_app_updater/: .gitignore  github_apps.csv  main.py  run.sh
default_apps/logged_in/: main.py  run.sh
default_apps/manual_pipeline/: job_queue.py  manual_pipeline_app.py  run.sh
default_apps/netflix/: main.py
default_apps/starter_app/: default_apps.json  main.py
docker/: run.dockerfile  syftbox.dockerfile
docs/: auth.md  syncing.md
fetchers/netflix/: .gitignore
lib/: lib.py  pyproject.toml  setup.py
load_testing/: locustfile.py
notebooks/: 01-trade-create.ipynb  02-trade-code.ipynb  03-netflix-code.ipynb  03-trade-review.ipynb  analytics.ipynb  rsync.ipynb  trade_private.csv
old/: notes.txt  syft_network
old/prototype1/: syt.ipynb
old/prototype2/: msg.txt.syftperm
old/prototype3/: .gitignore  Untitled-Copy1.ipynb  syftbox-Copy1.py  syftbox-Copy2.py  syftbox.py
old/prototype4/: shared_state.py
old/prototype5/: .coveragerc  syft_cache.py
old/prototype6/: syft_config.json
old/prototype7/: client.py  server.py
patch_@madhava@syft-cache.org/: 1723768647-973cd7ca6e501f9953ea3ed699cbcdb5c4db74af  1723772802-fe8b9c9a2509234779de51287a1db3db68713cc2
patch_@trask@syft-cache.org/: 1723769499-283c4f61542b14246abea9ab992b19d6329bcd1e  1723773865-c0190c11f86669e990484496a5fcbb211f3c10d7
projects/: .gitignore
projects/myanalysis/: manifest.json  run.sh
projects/netflix_stats/: Pyfhel-3.4.2-cp311-cp311-macosx_13_0_arm64.whl  main.py  manifest.json  run.sh
prototype1/: andrew_syt.ipynb
prototype2/madhava_env/: .gitignore  syft.config
prototype2/syft_cache/: server.py
prototype3/: Untitled.ipynb  build.sh  utils.py
prototype4/: main.py  plugin_manager.py
prototype5/: .coveragerc  .pre-commit-config.yaml  main.py  plugin_manager.py  pytest.ini  run_tests.py  server.py  setup.cfg  setup.py  shared_state.py
prototype5/syft/: .pre-commit-config.yaml  main.py  plugin_manager.py  server.py  shared_state.py
prototype5/syft/plugins/hello/: hello.py
prototype5/syft/plugins/init_datasite_git_repos/: init_datasite_git_repos.py
prototype5/syft/plugins/init_my_datasites/: init_my_datasites.py
prototype5/syft/plugins/init_public_view_in_server_if_new/: init_public_view_in_server_if_new.py
prototype5/syft/plugins/init_syftbox_folder/: test_folder_config.py
prototype5/syft/plugins/plugin_setup/: plugin.py  test_plugin.py
prototype5/syft/plugins/setup/: setup.py
prototype5/syft/plugins/users/: users.py
prototype5/tests/: test_main.py  test_plugin_manager.py  test_shared_state.py
prototype6/syft_cache/: cache_main.py  users.db
prototype6/syft_client/: client_main.py  (+2 more)
prototype7/: client.py  server.py
pyfhel/: .gitignore  Pyfhel-3.4.2-cp311-cp311-macosx_13_0_arm64.whl  build.sh
rpc/: app.py  example.ipynb  requirements.txt  rpc.py  serde.ipynb  server.py  utils.py
rpc/syft-event/: pyproject.toml
rpc/syft-event/syft_event/: __init__.py  response.py  server.py
rpc/syft-rpc/: pyproject.toml
rpc/syft-rpc/syft_rpc/: __init__.py  cbor.py  json.py  rpc.py  serde.py
scripts/: app.sh  deploy.sh  download_server.sh  install.sh  live_andrew.sh  live_madhava.sh  server.sh  ssh.sh  symlink.sh
server/: pyproject.toml  server.py
syftbox/: __version__.py  main.py
tests/: plugins_test.py
users/: .gitignore
(+247 files in other folders)
