[project]
name = "syftbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=43.0.1",
    "requests>=2.32.3",
    "fastapi>=0.114.0",
    "uvicorn>=0.30.6",
    "apscheduler>=3.10.4",
    "jinja2>=3.1.4",
    "typing-extensions>=4.12.2",
    "sqlalchemy>=2.0.34",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = {} }    # Use the find directive as a table
include-package-data = true # Include package data


[tool.setuptools.package-data]
syftbox = ["*.css", ".js", ".html", ".zip"]

[project.scripts]
syftbox = "syftbox.main:main"

[tool.pytest.ini_options]
pythonpath = ["."]

[project.optional-dependencies]
dev = ["pytest", "pytest-xdist[psutil]", "pytest-cov", "mypy", "uv", "ruff"]


[tool.ruff]
line-length = 88
exclude = ["data", "users", "build", "dist", ".venv"]

[tool.ruff.lint]
extend-select = ["I"]
