[project]
name = "syftbox-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=43.0.1",
    "flask>=3.0.3",
    "flask-apscheduler>=1.13.1",
    "requests>=2.32.3",
    "syftbox-lib",
]

[tool.uv.sources]
syftbox-lib = { path = "../lib", editable = true }
