[project]
name = "syftbox-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=43.0.1",
    "requests>=2.32.3",
    "fastapi>=0.114.0",
    "uvicorn>=0.30.6",
    "apscheduler>=3.10.4",
    "syftbox-lib",
    "jinja2>=3.1.4",
]

[tool.uv.sources]
syftbox-lib = { path = "../lib", editable = true }
