[metadata]
name = syft
version = 0.1.0
description = A plugin-based system for SyftBox
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/syft

[options]
packages = find:
python_requires = >=3.7
install_requires =
    watchdog

[options.packages.find]
where = .
exclude =
    tests*

[tool:pytest]
testpaths = tests syft/plugins
python_files = test_*.py
addopts = --cov=. --cov-report=term-missing --cov-report=html

[coverage:run]
source = .
omit = 
    run_tests.py
    */__init__.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if self.debug:
    if __name__ == .__main__.:
    raise NotImplementedError
    pass
    except ImportError:
    def main